--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <input type="text" id="groupMembers" name="groupMembers" required>
         </div>
         <div>
-            <label for="projectTitle">Project Title:</label>
-            <input type="text" id="projectTitle" name="projectTitle" required>
+            <label for="thing">Project Title:</label>
+            <input type="text" id="thing" name="thing" required>
         </div>
         <table>
             <thead>
